t-rex-runner/k8s-manifests/priv-escalation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priv-escalation
  labels:
    app: priv-escalation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: priv-escalation
  template:
    metadata:
      labels:
        app: priv-escalation
    spec:
      containers:
      - name: priv-escalation
        image: gcr.io/anthos-customer-demos/hello-app:35f08e2
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "100m"
            memory: "1Gi"
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: false
