t-rex-runner/k8s-manifests/resource-limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-limits
  labels:
    app: resource-limits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-limits
  template:
    metadata:
      labels:
        app: resource-limits
    spec:
      containers:
      - name: resource-limits
        image: gcr.io/anthos-customer-demos/hello-app:35f08e2
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "100m"
            memory: "1Gi"
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: false
