t-rex-runner/k8s-manifests/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: t-rex-app-service
spec:
  type: NodePort
  selector:
    app: t-rex-app
  ports:
  - protocol: TCP
    port: 60001
    targetPort: 5000
